--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2287,68 +2287,68 @@
 
         <div class="footer-category-box">
 
-          <h3 class="category-box-title">Fashion :</h3>
+          <h3 class="category-box-title">Antibiotics :</h3>
 
-          <a href="#" class="footer-category-link">T-shirt</a>
-          <a href="#" class="footer-category-link">Shirts</a>
-          <a href="#" class="footer-category-link">shorts & jeans</a>
-          <a href="#" class="footer-category-link">jacket</a>
-          <a href="#" class="footer-category-link">dress & frock</a>
-          <a href="#" class="footer-category-link">innerwear</a>
-          <a href="#" class="footer-category-link">hosiery</a>
+          <a href="#" class="footer-category-link">Lorem</a>
+          <a href="#" class="footer-category-link">Lorem</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
 
         </div>
 
         <div class="footer-category-box">
-          <h3 class="category-box-title">footwear :</h3>
+          <h3 class="category-box-title">Lorem Ipsum</h3>
         
-          <a href="#" class="footer-category-link">sport</a>
-          <a href="#" class="footer-category-link">formal</a>
-          <a href="#" class="footer-category-link">Boots</a>
-          <a href="#" class="footer-category-link">casual</a>
-          <a href="#" class="footer-category-link">cowboy shoes</a>
-          <a href="#" class="footer-category-link">safety shoes</a>
-          <a href="#" class="footer-category-link">Party wear shoes</a>
-          <a href="#" class="footer-category-link">Branded</a>
-          <a href="#" class="footer-category-link">Firstcopy</a>
-          <a href="#" class="footer-category-link">Long shoes</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
         </div>
 
         <div class="footer-category-box">
-          <h3 class="category-box-title">jewellery :</h3>
+          <h3 class="category-box-title">Lorem Ipsum :</h3>
         
-          <a href="#" class="footer-category-link">Necklace</a>
-          <a href="#" class="footer-category-link">Earrings</a>
-          <a href="#" class="footer-category-link">Couple rings</a>
-          <a href="#" class="footer-category-link">Pendants</a>
-          <a href="#" class="footer-category-link">Crystal</a>
-          <a href="#" class="footer-category-link">Bangles</a>
-          <a href="#" class="footer-category-link">bracelets</a>
-          <a href="#" class="footer-category-link">nosepin</a>
-          <a href="#" class="footer-category-link">chain</a>
-          <a href="#" class="footer-category-link">Earrings</a>
-          <a href="#" class="footer-category-link">Couple rings</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
         </div>
 
         <div class="footer-category-box">
-          <h3 class="category-box-title">cosmetics :</h3>
+          <h3 class="category-box-title">Lorem Ipsum :</h3>
         
-          <a href="#" class="footer-category-link">Shampoo</a>
-          <a href="#" class="footer-category-link">Bodywash</a>
-          <a href="#" class="footer-category-link">Facewash</a>
-          <a href="#" class="footer-category-link">makeup kit</a>
-          <a href="#" class="footer-category-link">liner</a>
-          <a href="#" class="footer-category-link">lipstick</a>
-          <a href="#" class="footer-category-link">prefume</a>
-          <a href="#" class="footer-category-link">Body soap</a>
-          <a href="#" class="footer-category-link">scrub</a>
-          <a href="#" class="footer-category-link">hair gel</a>
-          <a href="#" class="footer-category-link">hair colors</a>
-          <a href="#" class="footer-category-link">hair dye</a>
-          <a href="#" class="footer-category-link">sunscreen</a>
-          <a href="#" class="footer-category-link">skin loson</a>
-          <a href="#" class="footer-category-link">liner</a>
-          <a href="#" class="footer-category-link">lipstick</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">vLorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
+          <a href="#" class="footer-category-link">Lorem Ipsum</a>
         </div>
 
       </div>
@@ -2366,23 +2366,23 @@
           </li>
 
           <li class="footer-nav-item">
-            <a href="#" class="footer-nav-link">Fashion</a>
+            <a href="#" class="footer-nav-link">Lorem Ipsum</a>
           </li>
 
           <li class="footer-nav-item">
-            <a href="#" class="footer-nav-link">Electronic</a>
+            <a href="#" class="footer-nav-link">Lorem Ipsum</a>
           </li>
 
           <li class="footer-nav-item">
-            <a href="#" class="footer-nav-link">Cosmetic</a>
+            <a href="#" class="footer-nav-link">Lorem Ipsum</a>
           </li>
 
           <li class="footer-nav-item">
-            <a href="#" class="footer-nav-link">Health</a>
+            <a href="#" class="footer-nav-link">Lorem Ipsum</a>
           </li>
 
           <li class="footer-nav-item">
-            <a href="#" class="footer-nav-link">Watches</a>
+            <a href="#" class="footer-nav-link">Lorem Ipsum</a>
           </li>
 
         </ul>
@@ -2390,7 +2390,7 @@
         <ul class="footer-nav-list">
         
           <li class="footer-nav-item">
-            <h2 class="nav-title">Products</h2>
+            <h2 class="nav-title">Lorem Ipsum</h2>
           </li>
         
           <li class="footer-nav-item">
